chore: make sure type stubs are in the source distribution

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,24 @@
+[options]
+include_package_data = True
+package_dir =
+    =src
+packages = find:
+install_requires =
+    # NOTE: remember to keep `constraints-oldest.txt` in sync with these
+    darkgraylib~=2.2.0
+    toml>=0.10.0
+    typing_extensions>=4.0.1
+# NOTE: remember to keep `.github/workflows/python-package.yml` in sync
+#       with the minimum required Python version
+python_requires = >=3.9
+
+[options.packages.find]
+where = src
+
+[options.package_data]
+darker =
+  py.typed
+
 [flake8]
 # Line length according to Black rules
 max-line-length = 88
