--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -1,35 +1,29 @@
----
 name: Sphinx build
 
-on:
+on:  # yamllint disable-line rule:truthy
   push:
-    branches:
-      - master
+    paths:
+      - "docs/**"
+  workflow_dispatch:
 
 jobs:
   sphinx-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v4
+
+      - name: Install uv
+        uses: astral-sh/setup-uv@v4
         with:
           python-version: '3.13'
-          cache: 'pip'  # caching pip dependencies
-      - run: pip install .[release]
+          enable-cache: true
 
       - name: Build HTML
-        run: ./action/build_docs.sh
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: html-docs
-          path: ./sphinx_output/
+        run: uv run sphinx-build -b html docs docs/_build/html
 
       - name: Deploy
-        uses: peaceiris/actions-gh-pages@v3
-        if: github.ref == 'refs/heads/master'
+        if: ${{ github.ref == 'refs/heads/master' }}
+        uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./sphinx_output
-...
+          publish_dir: docs/_build/html
