--- a/.github/workflows/sphinx-build.yml
+++ b/.github/workflows/sphinx-build.yml
@@ -19,7 +19,7 @@ jobs:
           enable-cache: true
 
       - name: Sync UV
-        run: uv sync --group docs
+        run: uv sync --extra docs
 
       - name: Build HTML
         run: uv run sphinx-build -b html docs docs/_build/html
