--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -117,12 +117,15 @@ jobs:
         with:
           fetch-depth: 0
           # need full history since Pytest runs Darker itself below
-      - name: Install uv
-        uses: astral-sh/setup-uv@v3
       - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Install uv
+        uses: astral-sh/setup-uv@v6
+        with:
+          python-version: ${{ matrix.python-version }}
+          activate-environment: true
       - name: Download wheel uploaded by the build-wheel job
         uses: actions/download-artifact@v4
       - name: Install Darker and its dependencies from the wheel built earlier
@@ -163,6 +166,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: astral-sh/setup-uv@v6
+        with:
+          activate-environment: true
       - uses: actions/setup-python@v5
       - uses: actions/download-artifact@v4
       - run: >
@@ -178,6 +183,8 @@ jobs:
     steps:
       - uses: actions/checkout@v5
       - uses: astral-sh/setup-uv@v6
+        with:
+          activate-environment: true
       - uses: actions/setup-python@v5
       - uses: actions/download-artifact@v4
       - run: >
