--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ classifiers = [
 ]
 requires-python = ">=3.9"
 dependencies = [
-    "darkgraylib~=2.2.0",
+    "darkgraylib>=2.4.0,<3.0.dev0",
     "toml>=0.10.0",
     "typing_extensions>=4.0.1",
 ]
