--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -165,7 +165,7 @@ jobs:
       - uses: astral-sh/setup-uv@v6
       - uses: actions/setup-python@v5
       - uses: actions/download-artifact@v4
-        run: >
+      - run: >
           uv pip install ${{needs.build-wheel.outputs.wheel-path}}[color]
           | ( ! grep -E '^(error|warning): ' )
       - name: Ensure Pygments was installed
@@ -180,8 +180,7 @@ jobs:
       - uses: astral-sh/setup-uv@v6
       - uses: actions/setup-python@v5
       - uses: actions/download-artifact@v4
-      - name: Validate the [color] extras
-        run: >
+      - run: >
           uv pip install ${{needs.build-wheel.outputs.wheel-path}}
           | ( ! grep -E "^(error|warning): " )
       - name: Ensure Pygments was not installed
