--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 # Minimum requirements for the build system to execute.
-requires = ["setuptools", "wheel"]  # PEP 508 specifications.
+requires = ["setuptools", "wheel>=0.21.0"]  # Per PEP 517/518 build system requirements.
 
 [project]
 name = "darker"
@@ -53,15 +53,15 @@ dev = [
     "black>=22.3.0",
     "darkgray-dev-tools~=0.3.0",
     "defusedxml>=0.7.1",
+    "flake8>=3.8.0",
     "flynt>=0.76",
     "isort>=5.0.5",
     "mypy>=1.15",
-    "packaging",
-    "pathspec", # to test `gen_python_files` in `test_black_diff.py`
-    "pydocstyle",
+    "packaging>=14",
+    "pydocstyle>=2.0.0",
     "Pygments>=2.4.0",
     "pylint>=3.2.7",
-    "pylint-per-file-ignores",
+    "pylint-per-file-ignores>=1.3.2",
     "pytest>=6.2.0",
     "pytest-kwparametrize>=0.0.3",
     "pyupgrade>=3",
