--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -73,13 +73,13 @@ jobs:
           nix-shell \
             --pure \
             --run '
-              python -m venv venv
-              source venv/bin/activate
               cert_file=/nix/var/nix/profiles/default/etc/ssl/certs/ca-bundle.crt
               export NIX_SSL_CERT_FILE=$cert_file
-              pip install "${{needs.build-wheel.outputs.wheel-path}}[dev]"
+              uv venv
+              uv pip install "${{needs.build-wheel.outputs.wheel-path}}[dev]"
+              uv export --only-group=dev | uv pip install --requirements=-
               # Run tests in installed package to avoid plugin import issue:
-              pytest $(python -c "
+              PY_IGNORE_IMPORTMISMATCH=1 uv run pytest $(python -c "
           import os, darker
           print(os.path.dirname(darker.__file__))
               ")
