fix(ci): add explicit bash shell for Windows compatibility in workflow
The uv cache dir commands use bash-specific syntax ( and
command substitution) that fails on Windows runners without explicit shell
specification. Added shell: bash to all three get-uv-cache steps.

--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -44,6 +44,7 @@ jobs:
             req${{ hashFiles('setup.cfg') }}"
       - id: get-uv-cache
         if: steps.python-cache.outputs.cache-hit != 'true'
+        shell: bash
         run: echo "uv-cache-dir=$(uv cache dir)" >> ${GITHUB_OUTPUT}
       - name: "Cache uv"
         if: steps.python-cache.outputs.cache-hit != 'true'
@@ -173,6 +174,7 @@ jobs:
             req${{ hashFiles('setup.cfg') }}"
       - id: get-uv-cache
         if: steps.python-cache.outputs.cache-hit != 'true'
+        shell: bash
         run: echo "uv-cache-dir=$(uv cache dir)" >> ${GITHUB_OUTPUT}
       - name: "Cache uv"
         if: steps.python-cache.outputs.cache-hit != 'true'
@@ -232,6 +234,7 @@ jobs:
             req${{ hashFiles('setup.cfg') }}"
       - id: get-uv-cache
         if: steps.python-cache.outputs.cache-hit != 'true'
+        shell: bash
         run: echo "uv-cache-dir=$(uv cache dir)" >> ${GITHUB_OUTPUT}
       - name: "Cache uv"
         if: steps.python-cache.outputs.cache-hit != 'true'
