--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -3,42 +3,41 @@ name: pylint
 
 on: push  # yamllint disable-line rule:truthy
 
+# Down scope as necessary via
+# https://docs.github.com/en/actions/security-guides
+#  /automatic-token-authentication#
+#  modifying-the-permissions-for-the-github_token
+permissions:
+  checks: write
+  contents: write
+
 jobs:
   pylint:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
         with:
-          python-version: '3.x'
-      - name: Install uv
-        uses: astral-sh/setup-uv@v6
+          fetch-depth: 0  # Fetch all history for all branches and tags
+      - name: Pylint using Graylint's GitHub action
+        uses: akaihola/graylint@main
         with:
-          enable-cache: true
-          cache-dependency-glob: |
-            **/setup.cfg
-            **/pyproject.toml
-      - name: Install dependencies for running Pylint
-        run: |
-          uv pip install --system -U \
-            black \
-            git+https://github.com/akaihola/darkgraylib.git@main \
-            defusedxml \
-            pygments \
-            'pylint>=3.3.0' \
-            pylint-per-file-ignores \
-            pytest>=6.2.0 \
-            pyupgrade>=3 \
-            regex \
-            requests \
-            requests-cache \
-            ruamel.yaml \
-            setuptools \
-            toml
-          uv pip list --system
-      - uses: wearerequired/lint-action@v2.3.0
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          pylint: true
-          continue_on_error: false
+          version: "@main"
+          options: "--output-format=github"
+          src: "./src"
+          revision: "origin/master..."
+          with: >
+            black>=22.3.0
+            git+https://github.com/akaihola/darkgraylib.git@main
+            defusedxml>=0.7.1
+            pygments>=2.15.0
+            pylint-per-file-ignores>=1.3.2
+            pytest>=6.2.0
+            pyupgrade>=3
+            regex>=2021.4.4
+            requests
+            requests-cache>=0.7
+            ruamel.yaml>=0.17.21
+            setuptools
+            toml>=0.10.0
+          lint: "pylint>=3.3.0"
